--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent">
 
 
-    <fragment android:name="com.example.barcodereader.ui.scan.ZXingScannerFragment"
+    <fragment
         android:id="@+id/zxingScannerFragment"
+        android:name="com.example.barcodereader.ui.scan.ZXingScannerFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
