--- a/app/src/main/res/layout/fragment_modules.xml
+++ b/app/src/main/res/layout/fragment_modules.xml
@@ -6,26 +6,17 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/btnAddModule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="35dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="40dp"
         android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_open_dialog"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="@+id/gridViewModules"
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="30dp"
         app:srcCompat="@drawable/ic_add_black_24dp" />
-
-    <Button
-        android:id="@+id/btn_open_dialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
-        android:text="Open dialog"
-        app:layout_constraintBottom_toBottomOf="@+id/gridViewModules"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <GridView
         android:id="@+id/gridViewModules"
