--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorPrimaryDark">#1A1A1A</color>
     <color name="colorAccent">#14ffec</color>
     <color name="colorText">#eeeeee</color>
+    <color name="colorTextLight">#757575</color>
     <color name="colorBackground">#222222</color>
     <color name="colorBackgroundLight">#323232</color>
 
