--- a/app/src/main/res/layout/fragment_modules.xml
+++ b/app/src/main/res/layout/fragment_modules.xml
@@ -35,7 +35,7 @@
             android:paddingBottom="50dp">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textViewAppVersion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
