--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,47 +11,237 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:text="General"
-            android:textColor="@color/colorTextLight" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/colorTextLight"
-            android:orientation="horizontal"></LinearLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="General"
+                android:textColor="@color/colorTextLight" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="@dimen/settings_item_space"
+                android:background="@color/colorTextLight"
+                android:orientation="horizontal"></LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingLeft="40dp"
-            android:paddingRight="20dp">
+            android:paddingLeft="@dimen/settings_left_padding"
+            android:paddingRight="@dimen/settings_right_padding">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/settings_item_space">
+
+                <Spinner
+                    android:id="@+id/spinnerCamera"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Camera"
+                    android:textColor="@color/colorText"
+                    android:textSize="@dimen/settings_text_size"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Switch
-                android:id="@+id/switch2"
+                android:id="@+id/switchSound"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/settings_item_space"
-                android:layout_weight="1"
-                android:text="Switch"
+                android:text="Sound"
+                android:textColor="@color/colorText"
                 android:textSize="@dimen/settings_text_size" />
 
             <Switch
-                android:id="@+id/switch1"
+                android:id="@+id/switchVibration"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/settings_item_space"
-                android:layout_weight="1"
-                android:text="Switch"
+                android:checked="true"
+                android:text="Vibration"
+                android:textColor="@color/colorText"
                 android:textSize="@dimen/settings_text_size" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/settings_item_space"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="Content"
+                android:textColor="@color/colorTextLight" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="@dimen/settings_item_space"
+                android:background="@color/colorTextLight"
+                android:orientation="horizontal"></LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/settings_left_padding"
+            android:paddingRight="@dimen/settings_right_padding">
+
+            <Switch
+                android:id="@+id/switchChromeTabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/settings_item_space"
+                android:enabled="false"
+                android:text="Chrome Cutome Tabs"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/settings_text_size" />
+
+            <Switch
+                android:id="@+id/switchUrl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Use URL in barcode"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/settings_text_size" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/settings_item_space"
+                android:text="only if barcode contains URL"
+                android:textColor="@color/colorTextLight"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/settings_item_space"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="Search"
+                android:textColor="@color/colorTextLight" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="@dimen/settings_item_space"
+                android:background="@color/colorTextLight"
+                android:orientation="horizontal"></LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/settings_left_padding"
+            android:paddingRight="@dimen/settings_right_padding">
+
+
+            <ListView
+                android:id="@+id/listViewSettingSearch"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/settings_item_space"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="About App"
+                android:textColor="@color/colorTextLight" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="@dimen/settings_item_space"
+                android:background="@color/colorTextLight"
+                android:orientation="horizontal"></LinearLayout>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/settings_left_padding"
+            android:paddingRight="@dimen/settings_right_padding">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/settings_item_space"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Version:"
+                    android:textColor="@color/colorText"
+                    android:textSize="@dimen/settings_text_size" />
+
+                <TextView
+                    android:id="@+id/textViewAppVersion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:text="1.0.0"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/settings_text_size" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
 </ScrollView>
