--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="settings_text_size">16sp</dimen>
-    <dimen name="settings_item_space">4dp</dimen>
+    <dimen name="settings_item_space">10dp</dimen>
+    <dimen name="settings_left_padding">30dp</dimen>
+    <dimen name="settings_right_padding">15dp</dimen>
 </resources>
