history - design, link, copy

--- a/app/src/main/res/layout/listview_item_history.xml
+++ b/app/src/main/res/layout/listview_item_history.xml
@@ -1,18 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:padding="6dp">
 
-    <TextView
-        android:id="@+id/tvHistoryResultValue"
+    <ImageView
+        android:id="@+id/imageViewHistoryIcon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:srcCompat="@drawable/ic_dashboard_black_24dp" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="18sp" />
+        android:layout_marginStart="8dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvHistoryResultDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="" />
+        <TextView
+            android:id="@+id/tvHistoryResultValue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:text=""
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tvHistoryResultDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/colorTextLight" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/btnHistoryCopy"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="15dp"
+        app:srcCompat="@drawable/ic_content_copy_black_24dp" />
+
+    <ImageView
+        android:id="@+id/btnHistoryLink"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="10dp"
+        app:srcCompat="@drawable/ic_open_in_new_black_24dp" />
+
 </LinearLayout>
